apps/cilium-gateway/dashboard/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-dashboard
  namespace: cilium-gateway-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gateway.apps.lab.mxe11.nl
spec:
  parentRefs:
    - name: cilium-secure-gateway
      namespace: cilium-gateway-system
  hostnames: [gateway.apps.lab.mxe11.nl]
  rules:
    - backendRefs:
        - name: gateway-dashboard
          port: 80
